Fix flexbox alignment

--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,9 @@ h3 {
     color: #915230;
     text-shadow: -1px 1px rgb(3, 5, 29);
     font-size: 26px;
+    text-align: center;
+    flex: 1;
+    padding: 4px;
    }
 
 .a:visited {
